[DSW-1350] Fix logo squashing in Registry

--- a/engine-registry/scss/Common/Views/_ItemIcon.scss
+++ b/engine-registry/scss/Common/Views/_ItemIcon.scss
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     font-size: 1.125rem;
+    flex-shrink: 0;
 
     img {
         width: 100%;
